[gd_scene load_steps=8 format=3 uid="uid://bbblls44fev1x"]

[ext_resource type="Theme" uid="uid://cre4ao7e05vhg" path="res://main.theme" id="1_864ok"]
[ext_resource type="Script" path="res://scenes/pop_up.gd" id="1_p2lnp"]

[sub_resource type="LabelSettings" id="LabelSettings_b2i5c"]
font_size = 32
font_color = Color(0.992157, 0.745098, 0.32549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_437rw"]
font_size = 48
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_offset = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_esadn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ons1b"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lp37u"]
_data = {
"RESET": SubResource("Animation_esadn"),
"fade": SubResource("Animation_ons1b")
}

[node name="PopUp" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_864ok")
script = ExtResource("1_p2lnp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -21.0
offset_right = 23.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ComboLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "combo"
label_settings = SubResource("LabelSettings_b2i5c")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="OperationLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"
label_settings = SubResource("LabelSettings_437rw")
horizontal_alignment = 2

[node name="AmountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_437rw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lp37u")
}
autoplay = "fade"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
